--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "scripts": {
-    "build": "webpack --config webpack.config.js --mode production",
-    "dev": "webpack --config webpack.config.js --mode development",
-    "watch": "webpack --config webpack.config.js --mode development --watch"
+    "build": "webpack --config webpack.config.js --mode production --node-env=production",
+    "dev": "webpack --config webpack.config.js --mode development --node-env=development",
+    "watch": "webpack --config webpack.config.js --mode development --watch --node-env=development"
   },
   "devDependencies": {
     "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.24",
     "postcss-loader": "^7.3.3",
-    "purgecss-webpack-plugin": "^5.0.0",
+    "postcss-preset-env": "^8.5.0",
     "sass": "^1.63.4",
     "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.2",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "html2canvas": "^1.4.1",
+    "sticky-js": "^1.3.0",
+    "swiper": "^9.4.1"
   }
 }
