--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   },
   "devDependencies": {
     "css-loader": "^6.8.1",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.25.2",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.3",
@@ -19,6 +23,7 @@
   },
   "dependencies": {
     "html2canvas": "^1.4.1",
+    "jquery": "^3.7.0",
     "sticky-js": "^1.3.0",
     "swiper": "^9.4.1"
   }
